force-app/main/default/objects/Order/fields/entrega__c.field-meta.xml
<CustomField>
    <fullName>entrega__c</fullName>
    <label>Número de entrega</label>
    <length>10</length>
    <type>Text</type>
</CustomField>