force-app/main/default/objects/Order/fields/factura__c.field-meta.xml
<CustomField>
    <fullName>factura__c</fullName>
    <label>Número de Factura</label>
    <length>10</length>
    <type>Text</type>
</CustomField>