force-app/main/default/objects/Order/fields/IMP_CanalDistribucion__c.field-meta.xml
<CustomField>
    <fullName>IMP_CanalDistribucion__c</fullName>
    <label>Canal de distribución</label>
    <length>10</length>
    <type>Text</type>
</CustomField>