force-app/main/default/objects/Order/fields/IMP_CanalVentas__c.field-meta.xml
<CustomField>
    <fullName>IMP_CanalVentas__c</fullName>
    <label>Organización de ventas</label>
    <length>10</length>
    <type>Text</type>
</CustomField>