force-app/main/default/objects/Order/fields/IMP_CentroBeneficio__c.field-meta.xml
<CustomField>
    <fullName>IMP_CentroBeneficio__c</fullName>
    <label>Centro de beneficio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>