force-app/main/default/objects/Order/fields/IMP_ClaseDocumento__c.field-meta.xml
<CustomField>
    <fullName>IMP_ClaseDocumento__c</fullName>
    <label>Clase de documento</label>
    <length>15</length>
    <type>Text</type>
</CustomField>