force-app/main/default/objects/Order/fields/IMP_CreadoPor__c.field-meta.xml
<CustomField>
    <fullName>IMP_CreadoPor__c</fullName>
    <label>Creado por</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF</fullName>
                <default>true</default>
                <label>SF</label>
            </value>
            <value>
                <fullName>TIO</fullName>
            </value>
            <value>
                <fullName>PLENUS</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>