force-app/main/default/objects/Order/fields/IMP_DescripcionCeBe__c.field-meta.xml
<CustomField>
    <fullName>IMP_DescripcionCeBe__c</fullName>
    <label>Descripción Ce Be</label>
    <length>50</length>
    <type>Text</type>
</CustomField>