force-app/main/default/objects/Order/fields/IMP_DescripcionGrupoVendedor__c.field-meta.xml
<CustomField>
    <fullName>IMP_DescripcionGrupoVendedor__c</fullName>
    <label>Descripción Grupo Vendedor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>