force-app/main/default/objects/Order/fields/IMP_GrupoVendedor__c.field-meta.xml
<CustomField>
    <fullName>IMP_GrupoVendedor__c</fullName>
    <label>Grupo vendedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>