force-app/main/default/objects/Order/fields/IMP_ModificacionPedidos__c.field-meta.xml
<CustomField>
    <fullName>IMP_ModificacionPedidos__c</fullName>
    <label>Log Modificación Pedidos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>