force-app/main/default/objects/Order/fields/IMP_NumeroCliente__c.field-meta.xml
<CustomField>
    <fullName>IMP_NumeroCliente__c</fullName>
    <label>Número de cliente</label>
    <length>15</length>
    <type>Text</type>
</CustomField>