force-app/main/default/objects/Order/fields/IMP_NumeroPedido__c.field-meta.xml
<CustomField>
    <fullName>IMP_NumeroPedido__c</fullName>
    <formula>pedido__c</formula>
    <label>Número de Pedido</label>
    <type>Text</type>
</CustomField>