force-app/main/default/objects/Order/fields/IMP_OficinaVentas__c.field-meta.xml
<CustomField>
    <fullName>IMP_OficinaVentas__c</fullName>
    <label>Oficina de ventas</label>
    <length>10</length>
    <type>Text</type>
</CustomField>