force-app/main/default/objects/Order/fields/IMP_PedidoNombre__c.field-meta.xml
<CustomField>
    <fullName>IMP_PedidoNombre__c</fullName>
    <formula>&apos;SFDC&apos;+OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Pedido</label>
    <type>Text</type>
</CustomField>