force-app/main/default/objects/Order/fields/IMP_SectorVentas__c.field-meta.xml
<CustomField>
    <fullName>IMP_SectorVentas__c</fullName>
    <label>Sector de Ventas</label>
    <length>10</length>
    <type>Text</type>
</CustomField>