force-app/main/default/objects/Order/fields/OC__c.field-meta.xml
<CustomField>
    <fullName>OC__c</fullName>
    <formula>Opportunity.OC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OC</label>
    <type>Text</type>
</CustomField>