force-app/main/default/objects/Order/fields/pedido__c.field-meta.xml
<CustomField>
    <fullName>pedido__c</fullName>
    <description>Número de pedido en SAP</description>
    <externalId>true</externalId>
    <label>ID Pedido SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>