force-app/main/default/objects/Order/fields/Pedido_SAP__c.field-meta.xml
<CustomField>
    <fullName>Pedido_SAP__c</fullName>
    <formula>pedido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido SAP</label>
    <type>Text</type>
</CustomField>