force-app/main/default/objects/Order/fields/TotalPartidas__c.field-meta.xml
<CustomField>
    <fullName>TotalPartidas__c</fullName>
    <label>Total</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>