force-app/main/default/objects/Order/fields/TotalPedido__c.field-meta.xml
<CustomField>
    <fullName>TotalPedido__c</fullName>
    <description>Almacena el total del pedido</description>
    <label>Total de Pedido</label>
    <summarizedField>OrderItem.PrecioTotal__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>