force-app/main/default/objects/Order/fields/ViaPago__c.field-meta.xml
<CustomField>
    <fullName>ViaPago__c</fullName>
    <label>Vía de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>via_pago</valueSetName>
    </valueSet>
</CustomField>