force-app/main/default/objects/Order/recordTypes/PedidoOtrosOrigenes.recordType-meta.xml
<RecordType>
    <fullName>PedidoOtrosOrigenes</fullName>
    <active>true</active>
    <description>Tipo de registro para los pedidos generados en otros lugares diferentes a Salesforce</description>
    <label>Pedido Otros Orígenes</label>
</RecordType>