force-app/main/default/objects/Order/recordTypes/PedidoSalesforce.recordType-meta.xml
<RecordType>
    <fullName>PedidoSalesforce</fullName>
    <active>true</active>
    <description>Tipo de registro para los pedidos originados desde Salesforce</description>
    <label>Pedido Salesforce</label>
</RecordType>